some color chanages

--- a/views/directory.handlebars
+++ b/views/directory.handlebars
@@ -1,12 +1,12 @@
 
 
 
-<section id="gigs" class="container">
+<section id="dir" class="container">
   <h1>Contact Details</h1>
 
   {{#each dir}}
 
-    <div class="gig">
+    <div class="dir">
 
       <div> <p> First Name : {{first_name}}</p></div>
       <div><p> Last Lame : {{last_name}}</p></div>
