--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 :root {
   --primary-color: #568c9b;
   --primary-hover-color: #64a5b7;
-  --bg-color: #333;
+  --bg-color: #244f94;
   --box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.7);
 }
 
@@ -150,7 +150,6 @@ header.inner {
   color: #333;
 }
 
-/* Everything in the search form */
 .search-form > * {
   border: 0;
   padding: 0 0 0 10px;
@@ -165,8 +164,8 @@ input[type='search'] {
   flex-basis: 600px;
 }
 
-/* Gigs */
-.gig {
+/* Directory */
+.dir {
   background: var(--bg-color);
   border-bottom: 4px solid var(--primary-color);
   color: #fff;
@@ -175,18 +174,18 @@ input[type='search'] {
   box-shadow: var(--box-shadow);
 }
 
-.gig ul {
+.dir ul {
   list-style: none;
   display: flex;
 }
 
-.gig li {
+.dir li {
   margin-right: 0.5rem;
   padding: 0.6rem;
   display: inline-block
 }
 
-.gig .tech span {
+.dir .tech span {
   color: var(--primary-color);
 }
 
@@ -259,11 +258,11 @@ label {
     padding: 2.3rem;
   }
 
-  .gig ul {
+  .dir ul {
     flex-direction: column;
   }
 
-  .gig .btn {
+  .dir .btn {
     display: block;
     margin-top: 1rem;
     text-align: center;
