added new add route

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -2,7 +2,7 @@
     <div class="form-wrap">
       <h1>Add A Contact</h1>
       <p>Your contact details will be available to all hospital staff</p>
-      <form action="/dir/add" method="POST">
+      <form action="/dir/add/" method="POST">
   
    <div class="input-group">
      <label for="department"> Department</label>
