--- a/views/directory.handlebars
+++ b/views/directory.handlebars
@@ -15,6 +15,7 @@
       <div> <p> Department : {{department}}</p></div>
 
       <div>
+        <div> <img src="{{imagepath}}" alt=""></div>
         {{#if pager}} Bleeb :{{pager}} {{else}} <p>No Pager provided </p>{{/if}}
       </div>
     </div>
